# easyconvio

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample.py  setup.py
.github/workflows/: publish.yml  tests.yml
convertio_py/: __init__.py  audio.py  data.py  data_long.py  documents.py  ebooks.py  images.py  utils.py  video.py
easyconvio/: __init__.py  archive.py  audio.py  base.py  cad.py  document.py  ebook.py  font.py  image.py  presentation.py  spreadsheet.py  vector.py  video.py
tests/: conftest.py  test_archive.py  test_audio.py  test_base.py  test_cad.py  test_context_manager.py  test_document.py  test_ebook.py  test_font.py  test_image.py  test_init.py  test_lazy_imports.py  test_presentation.py  test_spreadsheet.py  test_vector.py  test_video.py
