[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyconvio"
version = "0.2.1"
description = "Simple file conversion and transformation for Python"
readme = "README.md"
authors = [{ name = "Joao Feck", email = "joaomfeck@gmail.com" }]
requires-python = ">=3.8"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow",
    "pydub",
    "pypandoc",
    "moviepy",
    "audioop-lts; python_version >= '3.13'",
]

[project.urls]
Homepage = "https://github.com/jmfeck/easyconvio"
Repository = "https://github.com/jmfeck/easyconvio"
Issues = "https://github.com/jmfeck/easyconvio/issues"

[project.optional-dependencies]
presentations = ["python-pptx"]
vectors = ["cairosvg"]
fonts = ["fonttools", "brotli"]
archives = ["py7zr", "rarfile"]
cad = ["ezdxf", "matplotlib"]
all = [
    "python-pptx",
    "cairosvg",
    "fonttools",
    "brotli",
    "py7zr",
    "rarfile",
    "ezdxf",
    "matplotlib",
]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["easyconvio*"]
